[package]
name = "raymundo"
version = "0.1.0"
authors = ["Daniel Miller <Peaches491@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.3.2"
image = "0.23"
log = "0.4.8"
nalgebra = "0.20"
num = "0.2.1"
simple-logging="2.0.2"
